Finished person class. Working on graph and api routes
